# patni

./: .gitignore  CLAUDE.md  DESIGN.md  ROADMAP.md  main.py  pyproject.toml  test_ibis.py  test_parallel.py  test_patni.py  test_ray.py  test_visualize.py
patni/: __init__.py  ibis.py  parallel.py  placeholder.py  ray.py
plans/: window_functions.md
